analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/danglingAnnotationOnTopLevelFunction.kt
// DO_NOT_CHECK_NON_PSI_SYMBOL_RESTORE
annotation class Ann

@Ann(
<caret>fun foo() = 42